# vega-rust-sdk

./: Cargo.toml  build.rs
crypto/: Cargo.toml
crypto/examples/: submit_order.rs  vote.rs
crypto/src/: crypto.rs  lib.rs  pow.rs  slip10.rs
examples/: vote.rs
protobufs/: Cargo.toml  build.rs
protobufs/examples/: list_markets.rs  vote.rs
protobufs/src/: lib.rs  protos.rs
src/: errors.rs  lib.rs  pow.rs  slip10.rs
wallet_client/: Cargo.toml  LICENSE
wallet_client/examples/: send_vote.rs
wallet_client/src/: commands.rs  lib.rs  request.rs  response.rs
