[package]
name = "vega-rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
bip39 = {version = "1.0.1", features = ["rand"] }
tonic = "0.7.1"
prost = "0.10.1"
sha3 = "0.9.1"
base58 = "0.2.0"
ed25519-compact = "0.1"
hex = "0.4"
hmac = "0.11"
regex = "1"
sha2 = "0.9"
rand = "0.8.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "net", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7.2"
walkdir = "2"
