[package]
name = "vega-rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
bip39 = {version = "1.0.1", features = ["rand"] }
ed25519-compact = "2.0.2"
hex = "0.4.3"
hmac = "0.11.0"
prost = "0.11.2"
rand = "0.8.4"
regex = "1"
sha2 = "0.9"
sha3 = "0.10.6"
tonic = "0.8.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "net", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8.2"
walkdir = "2"
protobuf-src = "1.1.0"
